--- a/code-clone/src/index.html
+++ b/code-clone/src/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FirebaseDemo</title>
+  <title>Code Clone</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+  <!--  <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">-->
+
 </head>
 <body>
   <app-root></app-root>
+<!--  <script src="../node_modules/jquery/dist/jquery.js"></script>-->
+<!--  <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>-->
 </body>
 </html>
