--- a/code-clone/src/index.html
+++ b/code-clone/src/index.html
@@ -9,8 +9,10 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
   <!--  <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">-->
 
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="mat-typography">
   <app-root></app-root>
 <!--  <script src="../node_modules/jquery/dist/jquery.js"></script>-->
 <!--  <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>-->
